--- a/index.html
+++ b/index.html
@@ -7,20 +7,24 @@
   </head>
   <body>
 
-    <div class="flex-container">
-      <div class="item1">
+    <div class="grid-container">
+      <div class="grid-item" id="item1">
 
-        <img class="imgLuca" src="https://lh3.googleusercontent.com/a-/AAuE7mB9O_YMdpkmS0PqQ6hZKATM1ui7Gf3QOPoBCvko=s192" width="95" height="95" alt="Picture of me">
-        <h1>Luca Vanheeswijck</h1>
-        <h2>Junior Web Developer</h2>
+        <h1 class="headOne">Luca Vanheeswijck</h1>
+        <h2 class="headOne">Junior Web Developer</h2>
+        <img id="imgLuca" src="https://lh3.googleusercontent.com/a-/AAuE7mB9O_YMdpkmS0PqQ6hZKATM1ui7Gf3QOPoBCvko=s192" alt="Image of me">
+
+      </div>
+      <div class="grid-item" id="item2">
+
         <p id="aboutMe">About me</p>
-        <p id="aboutText">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.<br> Aenean commodo ligula eget dolor. Aenean massa.<br> Cum sociis natoque penatibus et magnis dis parturient montes,<br> nascetur ridiculus mus. Donec quam felis,<br> ultricies nec, pellentesque eu, pretium quis, sem. </p>
+        <p id="aboutInfo">Lorem ipsum dolor sit amet, consectetuer adipiscing<br> elit. Aenean commodo ligula eget dolor. Aenean massa.<br> Cum sociis natoque penatibus et magnis dis parturient<br> montes, nascetur ridiculus mus. Donec quam felis, ultricies<br> nec, pellentesque eu, pretium quis, sem.</p>
         <p id="LinkedIn">LinkedIn Profile</p>
-        <a href="https://www.linkedin.com/in/luca-vanheeswijck-811156178/">LinkedIn</a>
+        <a id="Linked" href="#">LinkedIn</a>
         <p id="age">Age: 18</p>
         <p id="residence">Residence: Belgium</p>
-        <p id="phone">+32 497 12 95 17</p>
         <p id="email">lucavhw@gmail.com</p>
+        <p id="phone">+32 497 12 95 17</p>
 
       </div>
     </div>
