--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <p id="aboutMe">About me</p>
         <p id="aboutInfo">Lorem ipsum dolor sit amet, consectetuer adipiscing<br> elit. Aenean commodo ligula eget dolor. Aenean massa.<br> Cum sociis natoque penatibus et magnis dis parturient<br> montes, nascetur ridiculus mus. Donec quam felis, ultricies<br> nec, pellentesque eu, pretium quis, sem.</p>
         <p id="LinkedIn">LinkedIn Profile</p>
-        <a id="Linked" href="#">LinkedIn</a>
+        <a id="Linked" href="https://www.linkedin.com/in/luca-vanheeswijck-811156178/">LinkedIn</a>
         <p id="age">Age: 18</p>
         <p id="residence">Residence: Belgium</p>
         <p id="email">lucavhw@gmail.com</p>
