--- a/index.html
+++ b/index.html
@@ -18,13 +18,18 @@
       <div class="grid-item" id="item2">
 
         <p id="aboutMe">About me</p>
-        <p id="aboutInfo">Lorem ipsum dolor sit amet, consectetuer adipiscing<br> elit. Aenean commodo ligula eget dolor. Aenean massa.<br> Cum sociis natoque penatibus et magnis dis parturient<br> montes, nascetur ridiculus mus. Donec quam felis, ultricies<br> nec, pellentesque eu, pretium quis, sem.</p>
-        <p id="LinkedIn">LinkedIn Profile</p>
-        <a id="Linked" href="https://www.linkedin.com/in/luca-vanheeswijck-811156178/">LinkedIn</a>
+        <p id="aboutInfo">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.<br> Aenean commodo ligula eget dolor. Aenean massa. Cum<br> sociis natoque penatibus et magnis dis parturient montes,<br> nascetur ridiculus mus. Donec quam felis, ultricies nec,<br> pellentesque eu, pretium quis, sem. Nulla consequat massa<br> quis enim. Donec pede justo, fringilla vel, aliquet nec,<br> vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet<br> a, venenatis vitae, justo. Nullam dictum </p>
         <p id="age">Age: 18</p>
         <p id="residence">Residence: Belgium</p>
         <p id="email">lucavhw@gmail.com</p>
         <p id="phone">+32 497 12 95 17</p>
+
+      </div>
+      <div class="grid-item" id="item3">
+
+        <a id="Linked" href="https://www.linkedin.com/in/luca-vanheeswijck-811156178/">LinkedIn</a>
+        <a id="CV" href="https://lucavhw.github.io/Mijn-CV/">CV</a>
+        <a id="github" href="https://github.com/LucaVHW">Github</a>
 
       </div>
     </div>
