--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
       </div>
       <div class="grid-item" id="item3">
 
-        <a id="Linked" href="https://www.linkedin.com/in/luca-vanheeswijck-811156178/">LinkedIn</a>
-        <a id="CV" href="https://lucavhw.github.io/Mijn-CV/">CV</a>
-        <a id="github" href="https://github.com/LucaVHW">Github</a>
+        <a id="Linked" href="https://www.linkedin.com/in/luca-vanheeswijck-811156178/" target="_blank">LinkedIn</a>
+        <a id="CV" href="https://lucavhw.github.io/Mijn-CV/" target="_blank">CV</a>
+        <a id="github" href="https://github.com/LucaVHW" target="_blank">Github</a>
 
       </div>
     </div>
