--- a/index.html
+++ b/index.html
@@ -4,35 +4,35 @@
     <meta charset="utf-8">
     <title>VCard</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   </head>
   <body>
-
-    <div class="grid-container">
-      <div class="grid-item" id="item1">
-
-        <h1 class="headOne">Luca Vanheeswijck</h1>
-        <h2 class="headOne">Junior Web Developer</h2>
-        <img id="imgLuca" src="https://lh3.googleusercontent.com/a-/AAuE7mB9O_YMdpkmS0PqQ6hZKATM1ui7Gf3QOPoBCvko=s192" alt="Image of me">
-
+    <header></header>
+    <div class="nav">
+      <ul>
+        <li><a href="https://github.com/LucaVHW" target="_blank"><i class="fab fa-github"></i> Github</a></li>
+        <li><a href="https://www.linkedin.com/in/luca-vanheeswijck-811156178/" target="_blank"><i class="fab fa-linkedin-in"></i> Linkedin</a></li>
+        <li><a href="https://lucavhw.github.io/Mijn-CV/" target="_blank"><i class="far fa-file-alt"></i> CV</a></li>
+      </ul>
+    </div>
+    <div class="main">
+      <div class="panel1">
+        <img src="images/46563814.jpeg" alt="">
       </div>
-      <div class="grid-item" id="item2">
-
-        <p id="aboutMe">About me</p>
-        <p id="aboutInfo">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.<br> Aenean commodo ligula eget dolor. Aenean massa. Cum<br> sociis natoque penatibus et magnis dis parturient montes,<br> nascetur ridiculus mus. Donec quam felis, ultricies nec,<br> pellentesque eu, pretium quis, sem. Nulla consequat massa<br> quis enim. Donec pede justo, fringilla vel, aliquet nec,<br> vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet<br> a, venenatis vitae, justo. Nullam dictum </p>
-        <p id="age">Age: 18</p>
-        <p id="residence">Residence: Belgium</p>
-        <p id="email">lucavhw@gmail.com</p>
-        <p id="phone">+32 497 12 95 17</p>
-
+      <div class="panel2">
+        <h3>About me</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
-      <div class="grid-item" id="item3">
-
-        <a id="Linked" href="https://www.linkedin.com/in/luca-vanheeswijck-811156178/" target="_blank">LinkedIn</a>
-        <a id="CV" href="https://lucavhw.github.io/Mijn-CV/" target="_blank">CV</a>
-        <a id="github" href="https://github.com/LucaVHW" target="_blank">Github</a>
-
+      <div class="panel3">
+        <br>
+        <br>
+        <h2>Age: 18</h2>
+        <h2>Residence: Belgium</h2>
+        <h2>lucavhw@gmail.com</h2>
+        <h2>+32 497 12 95 17</h2>
       </div>
     </div>
-
   </body>
 </html>
